third_party/move/move-compiler-v2/tests/bytecode-verify-failure/equality.move
module 0xc0ffee::m {
  fun equality<T>(x: T, y: T): bool {
        x == y
    }
}
